[JPA][Baron-Janelle] Feature: applied dto to service and controller